syntax = "proto3";
package LightGame.Protocol;

//心跳
message C2S1 {

}

//在线/离线通知
message S2C100 {
	int64 UserId = 1;
	bool IsOnline = 2;
}

//连接网关
message C2S100000 {

}

//加入频道
message C2S100001 {
	int32 RoomId = 1;
}

message MsgVector3 {
	float X = 1;
	float Y = 2;
	float Z = 3;
}

message UserTransform {
	int64 UserId = 1;
	string UserName = 2;
	MsgVector3 Position = 3;
	MsgVector3 Rotation = 4; 
}

message S2C100001 {
	int32 RoomId = 1;
	repeated UserTransform UserTransforms = 2;
}

//通知加入频道
message S2C100002 {
	int64 UserId = 1;
	string UserName = 2;
	int32 RoomId = 3;
}

//离开频道
message C2S100005 {
	int32 RoomId = 1;
}

//通知离开频道
message S2C100006 {
	int64 UserId = 1;
	int32 RoomId = 2;
}

//发送消息
message C2S100007 {
	string Content = 1;
}

//通知消息
message S2C100008 {
	int64 UserId = 1;
	string Content = 2;
}

message TransformInfo {
	MsgVector3 Position = 1;
	MsgVector3 Rotation = 2;
}

message StateInfo {
	int64 UserId = 1;
	int32 BloodValue = 2;
	int32 KillCount = 3;
	int32 DeadCount = 4;
	TransformInfo Transform = 5;
}

message StateInfoList {
	repeated StateInfo StateInfos = 1;
}

//玩家指令
message CommandInfo {
	int64 UserId = 1;
	int32 CommandId = 2;
	bytes CommandContent = 3;
}

//玩家指令集
message C2S100009 {
	repeated CommandInfo Commands = 1;
}

//通知玩家指令集
message S2C100010 {
	int32 FrameCount = 1;
	repeated CommandInfo Commands = 2;
	bytes CommandResult = 3;
}